--- a/index.html
+++ b/index.html
@@ -5,122 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5968971b15.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css"/>
     <link rel="stylesheet" href="style/responsive.css">
   </head>
   <body>
     <header>
-      <div class="logo">
-        <p>Zetta Hotels</p>
-      </div>
-      <nav>
-        <ul>
-          <li class="list-items"><a href="#">home</a></li>
-          <li class="list-items"><a href="#">rooms</a></li>
-          <li class="list-items"><a href="#">restaurant</a></li>
-          <li class="list-items"><a href="#">about us</a></li>
-          <li class="list-items"><a href="#">blog</a></li>
-          <li class="list-items"><a href="#">contact</a></li>
-        </ul>
-      </nav>
-      <div class="about-header">
-        <h1>About Us</h1>
+      <div class="header-wrapper">
+        <div class="header-flex">
+          <div class="logo">
+            <a href="#">Zetta Hotels</a>
+          </div>
+          <nav class="navigation">
+            <ul>
+              <li class="list-items"><a href="#">home</a></li>
+              <li class="list-items"><a href="#">rooms</a></li>
+              <li class="list-items"><a href="#">restaurant</a></li>
+              <li class="list-items"><a href="#">about us</a></li>
+              <li class="list-items"><a href="#">blog</a></li>
+              <li class="list-items"><a href="#">contact</a></li>
+            </ul>
+          </nav>
+          <i class="burger-bar fas fa-bars"></i>
+        </div>
+        <div class="about-header">
+          <h1>About Us</h1>
+        </div>
       </div>
     </header>
     <section id="about-section">
       <div class="about-wrapper">
         <div class="about-info">
-          <h4 class="">ABOUT US</h4>
-          <h2>Trust and quality <br> are our atuus</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <h4 class="small-about">ABOUT US</h4>
+          <h2 class="info-header">Trust and quality <br> are our atuus</h2>
+          <p class="info-par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
           <br>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
           <button id="read-more">read more</button>
         </div>
-      </div>
-    </section>
-    <section id="about-section-second">
-      <div class="video-container">
-        <h3 class="section-header">VIDEOS | view all videos</h3>
-        <div class="video-wrapper">
-          <div class="video vid1">
-            <p>EMBEDED YOUTUBE VIDEO GOES HERE</p>
+        <div class="photos">
+          <div class="image-row-1">
+            <img src="images/Pic1.jpg" alt="staircase">
+            <img src="images/Pic2.jpg" alt="pool">
           </div>
-          <div class="video vid2">
-            <p>EMBEDED YOUTUBE VIDEO GOES HERE</p>
+          <div class="image-row-2">
+            <img src="images/pic3.jpg" alt="garden">
           </div>
         </div>
       </div>
     </section>
-    <section id="news-section">
-      <div class="news-container">
-        <h3 class="section-header news-header">NEWS | view all news</h3>
-        <div class="news-wrapper">
-          <div class="image-div">
-            <img src="images/News1.jpg" alt="news" />
-            <p class="img-desc">TYPOGRAPHY LAB</p>
-          </div>
-          <div class="image-div">
-            <img src="images/News2.jpg" alt="news" />
-            <p class="img-desc">ONLINE MARKETING</p>
-          </div>
-          <div class="image-div">
-            <img src="images/News3.jpg" alt="news" />
-            <p class="img-desc">C# CODING</p>
-          </div>
-          <div class="image-div">
-            <img src="images/News4.jpg" alt="news" />
-            <p class="img-desc">INTERFACE DESIGN</p>
-          </div>
+    <section id="details-section">
+      <div class="details-wrapper">
+        <div class="details-header">
+          <h4 class="small-about">ABOUT US</h4>
+          <h2 class="info-header white">We bring you the <br> finest details</h2>
         </div>
-      </div>
-    </section>
-    <section id="media-section">
-      <div class="media-container">
-        <h3 class="section-header media-main-header">
-          FEATURED | view all featured media
-        </h3>
-        <div class="media-wrapper">
-          <div class="dev-info dev-info-1">
-            <h3 class="media-header">RESPONSIVE WEB DESIGN</h3>
-            <div class="flex-info">
-              <div class="img-container">
-                <img src="images/Pointer.png" alt="pointer" />
-              </div>
-              <p class="media-desc">
-                approach that suggests that design and development should
-                respond to the user's behavior and environment based on screen
-                size, platform and orientation.
-              </p>
+        <div class="cards">
+          <div class="card">
+            <div class="hotel-container">
+              <i class="fas fa-hotel"></i>
             </div>
-            <p class="read-more">read more</p>
+            <h4 class="card-header">Free Wifi
+            to stay connected</h4>
+            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
-          <div class="dev-info">
-            <h3 class="media-header">APP DEVELOPMENT</h3>
-            <div class="flex-info">
-              <div class="img-container">
-                <img src="images/Phone.png" alt="phone" />
-              </div>
-              <p class="media-desc">
-                Mobile application development is the process of making or
-                creating a mobile application to run on various mobile
-                platforms. A mobile platform is a mobile operating system.
-              </p>
+          <div class="card">
+            <div class="hotel-container">
+              <i class="fas fa-hotel"></i>
             </div>
-            <p class="read-more">read more</p>
+            <h4 class="card-header">4K Television and
+            Netflix included</h4>
+            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="card">
+            <div class="hotel-container">
+              <i class="fas fa-hotel"></i>
+            </div>
+            <h4 class="card-header">Span zone where
+            you can chill</h4>
+            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="card">
+            <div class="hotel-container">
+              <i class="fas fa-hotel"></i>
+            </div>
+            <h4 class="card-header">Spacious rooms
+            for awesome parties</h4>
+            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
         </div>
       </div>
     </section>
-    <footer>
-      <div class="footer-container">
-        <p>©2021 hyper text markup language</p>
-        <p>created by: ME</p>
-      </div>
-    </footer>
   </body>
 </html>
