--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="about-section">
       <div class="about-wrapper">
         <div class="about-info">
-          <h4 class="small-about resp-disappear">ABOUT US</h4>
+          <h4 class="small-about">ABOUT US</h4>
           <h2 class="info-header">Trust and quality <br> are our atuus</h2>
           <p class="info-par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
           aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
