--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="images/Pic2.jpg" alt="pool">
           </div>
           <div class="image-row-2">
-            <img src="images/pic3.jpg" alt="garden">
+            <img src="images/Pic3.jpg" alt="garden">
           </div>
         </div>
       </div>
